# mipt_list

./: CMakeLists.txt
code/: list.h  main.cpp
